--- a/test/src/index.css
+++ b/test/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bar {
+  background-color: blue;
+  height: 100%;
+  width: 100%;
+}
