state and props for sentence/choices tbc (#9, #11, #12, #13)

--- a/test/src/index.css
+++ b/test/src/index.css
@@ -1,14 +1,5 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Poppins;
 }
 
 .bar {
@@ -70,6 +61,7 @@ code {
 
 .task {
   border: 0.1px solid #7CA3EE;
+  padding: 1em;
 }
 
 .word-grid {
@@ -88,7 +80,13 @@ code {
 .word {
   font-size: 12px;
 }
-
+.task > p {
+  display: inline;
+  margin: 0;
+}
 p {
   margin: 1em;
+}
+.wordBox {
+  cursor: pointer;
 }
