--- a/test/src/index.css
+++ b/test/src/index.css
@@ -6,60 +6,64 @@ body {
 /* NAVBAR */
 
 .bar {
+  /* border: 1px solid red; */
   background-color: #8AA9E4;
   height: 100%;
   width: 100%;
   margin-top: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
-  /* border: 1px solid red; */
 }
 
 .left-div {
+  /* border: 1px solid purple; */
   display: grid;
   grid-template-columns: 0.7fr 1fr;
   margin-left: 1em;
   align-items: center;
-  /* border: 1px solid purple; */
   height: 100%;
 }
 
-/* #logo {
-
-} */
-
-#navbarTitle {
-  font-size: 1.5em;
-  /* border: 1px solid brown; */
-  display: grid;
-  justify-content: center;
+#logo {
+  cursor: pointer;
 }
 
-
-.right-div {
+.mid-div{
+  /* border: 1px solid pink; */
   display: grid;
   grid-template-columns: auto auto;
-  /* margin-left: 1em; */
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+#navbarTitle {
+  /* border: 1px solid brown; */
+  font-size: 1.5em;
+}
+
+.right-div {
+  /* border: 1px solid pink; */
+  display: grid;
+  grid-template-columns: auto auto;
   align-items: center;
   justify-content: end;
-  /* border: 1px solid pink; */
   height: 100%;
 
 }
 
 #previousQ, #nextQ {
+  /* box-shadow: 1px 1px 4px #8AA9E4; */
   margin-right: 1em;
   background-color: #BDD3FC;
   border: 0;
-  /* box-shadow: 1px 1px 4px #8AA9E4; */
   padding: 1vmin;
 }
 
 
 /* PAGE-CONTENT */
 
-.wrapper { /* Page/game content */
+.wrapper {
   border: 1px solid #7CA3EE;
   padding: 0.6em;
   display: grid;
@@ -69,15 +73,16 @@ body {
 }
 
 .header-wrapper {
+  /* border: 1px solid red; */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   border-bottom: 0.5px solid #7CA3EE;
-  padding: 0.6em;
-  /* border: 1px solid red; */
+  padding: .3em;
+  margin: 0 -0.6em;
 }
 
 .cHText {
-  font-size: 1.5em;
+  font-size: 1.3em;
   margin-left: 1em;
 }
 
@@ -86,7 +91,9 @@ body {
   justify-content: end;
   margin-right: 1em;
   font-size: 1.2em;
+  color:#3f6cc0;
   align-items: center;
+  text-underline-offset: .2em;
 }
 
 
@@ -95,6 +102,11 @@ body {
 .progress-bar {
   background-color: #7CA3EE;
   width: 100%;
+}
+#progress {
+  background-color: #3f6cc0;
+  width: 33%;
+  height: 100%;
 }
 
 .question {
@@ -111,32 +123,74 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
-.word-grid > div {
+.word-grid > button {
   background-color: #eee;
   margin: 1em;
+  padding: 1em;
+  border: 1px solid darkgrey;
+  font-size: 1em;
 }
-.word-grid > div:nth-child(odd) {
+.word-grid > button:nth-child(odd) {
   background-color: #ddd;
 }
 
-.word {
-  font-size: 12px;
-}
 .task > p {
   display: inline;
   margin: 0;
+  margin-right: .5em;
+  margin-left: .5em;
 }
+.task {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* border: 1px solid red; */
+}
+.taskPBorder{
+  border: 1px solid darkgrey;
+  background-color: #eee;
+  padding: .3em;
+}
+.taskPBorder.taskPBorderEmpty{
+  /* border: 1px solid purple; */
+  background-color: #61d47e;
+}
+#wordContainer {
+  border: 1px solid lightgrey;
+  max-width: 8em;
+  max-height: 2.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 p {
   margin: 1em;
 }
-.wordBox {
+.wordBox, #checkAnswerBtn {
   cursor: pointer;
 }
+
+.wordBox:disabled, #checkAnswerBtn:disabled {
+  cursor: default;
+}
+
+#checkAnswerBtn {
+  width: 50%;
+  display: flex;
+  justify-self: center;
+  justify-content: center;
+  padding: 1.2em;
+  text-decoration: underline;
+  text-underline-offset: .3em;
+}
+
+
 
 
 /* RESULT-BOX */
 
-#resultBox.grå {
+#resultBox {
   /* border: 1px solid red; */
   background-color: #C6CAC7;
   display: grid;
@@ -146,10 +200,11 @@ p {
   width: 70%;
   justify-self: center;
   padding: 3%;
+  margin: 1em 0;
 }
 
-#resultBox.riktig{
-  background-color: #61d47e;
+#resultBox.grey{
+  background-color: #C6CAC7;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: space-around;
@@ -157,6 +212,7 @@ p {
   width: 70%;
   justify-self: center;
   padding: 3%;
+  margin: 1em 0;
 }
 
 #resultBox.feil {
@@ -168,7 +224,21 @@ p {
   width: 70%;
   justify-self: center;
   padding: 3%;
+  margin: 1em 0;
 }
+
+#resultBox.riktig{
+  background-color: #61d47e;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-around;
+  align-items: center;
+  width: 70%;
+  justify-self: center;
+  padding: 3%;
+  margin: 1em 0;
+}
+
 
 #resultText{
   /* border: 1px solid purple; */
@@ -188,8 +258,4 @@ p {
   font-size: 1.2em;
   height: 120%;
   border: 1px solid darkgrey;
-}
-.empty {
-  color: white;
-  border: 0.1em solid grey;
 }
